--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -1,4 +1,4 @@
-<%= f.text_field :name, { :label => translate('projects.title') } -%>
-<%= f.text_area :bio, { :label => translate('projects.description') } -%>
+<%= f.text_field :name, { :label => translate('characters.name') } -%>
+<%= f.text_area :bio, { :label => translate('characters.bio') } -%>
 <%= image_tag @character.photo.url(:thumb) if @character && @character.photo_file_name %>
 <%= f.file_field :photo, { :label => 'Upload a Photo (Please use a square image)' } %>
