--- a/app/views/default/index.html.erb
+++ b/app/views/default/index.html.erb
@@ -1,52 +1,21 @@
 <div class="feature"> 
 	<div class="feature-holder"> 
-		<ul class="options-list"><li><a href="#" class="twitter">twitter</a></li><li><a href="#" class="comments">comments</a></li><li><a href="#" class="my-space">my-space</a></li><li><a href="#" class="doc">doc</a></li>							</ul><!-- options list --> 
-		<h2 class="text-feature">featured re-enactment</h2><!-- text featured --> 
-		<div class="row"> 
+		<ul class="options-list">
+		  <li><a href="#" class="twitter">twitter</a></li>
+		  <li><a href="#" class="comments">comments</a></li>
+		  <li><a href="#" class="my-space">my-space</a></li>
+		  <li><a href="#" class="doc">doc</a></li>							
+		</ul>
+		<h2 class="text-feature">featured re-enactment</h2>
+		<div class="row">
+		  <h3 class="text-sinking"><%= link_to @project.title, @project %></h3>
 			<div class="img-holder"> 
-				<h3 class="text-sinking">Sinking of the Titanik</h3><!-- text sinking --> 
-				<img src="images/img01.jpg" alt="" width="332" height="224" /> 
-			</div><!-- img holder --> 
-			<ul class="cite-list"> 
-				<li> 
-					<div class="visual"> 
-						<img src="images/img02.jpg" alt="" width="62" height="62" /> 
-					</div><!-- visual --> 
-					<div class="text-holder"> 
-						<p><strong class="name">C_Lightoller</strong> Just sent lifeboat 12 away with 40 women and children</p> 
-						<em class="date"> Jun 11, 1:25 AM</em><!-- date --> 
-					</div><!-- text holder --> 
-				</li> 
-				<li> 
-					<div class="visual"> 
-						<img src="images/img03.jpg" alt="" width="62" height="62" /> 
-					</div><!-- visual --> 
-					<div class="text-holder"> 
-						<p><strong class="name">J_Phillips</strong>  Word is we are sinking. Staying at my post. Trying to raise another ship on our wireless.</p> 
-						<em class="date">Jun 11, 1:20AM</em><!-- date --> 
-					</div><!-- text holder --> 
-				</li> 
-				<li> 
-					<div class="visual"> 
-						<img src="images/img04.jpg" alt="" width="62" height="62" /> 
-					</div><!-- visual --> 
-					<div class="text-holder"> 
-						<p><strong class="name">C_Lightoller</strong> I gave them orders to row towards the lights of the ship that was still visible but not responding.</p> 
-						<em class="date"> Jun 11, 1:16 AM</em><!-- date --> 
-					</div><!-- text holder --> 
-				</li> 
-				<li> 
-					<div class="visual"> 
-						<img src="images/img05.jpg" alt="" width="62" height="62" /> 
-					</div><!-- visual --> 
-					<div class="text-holder"> 
-						<p><strong class="name">Capt_Smith</strong>Titanic just lurched to port, with the deck tilting. The band is playing for us. Boats No. 9 and No. 10 are lowering.</p> 
-						<em class="date"> Jun 11, 1:15 AM</em><!-- date --> 
-					</div><!-- text holder --> 
-				</li> 
-			</ul><!-- cite list --> 
-		</div><!-- row --> 
-	</div><!-- feature holder --> 
-</div><!-- feture block --> 
-<h2>How it Works</h2> 
-<p>Ladies and gentlemen. The Titanic will sail again…and then it will sink again! We are presenting TwHistory at two conferences this week (TTIX and GLS). We will explain how a TwHistory event can be coordinated, and then we will demonstrate it by asking participants to create tweets around the sinking of the Titanic. If you would like to be updated on this event, please follow @TwHistory. This event will happen June 10th, 2010. Hope to see you there!</p>
+				<%= link_to image_tag(@project.photo.url(:medium)), @project %>
+			</div>
+			<ul class="cite-list">
+			  <%= render :partial => 'projects/item', :collection => @items %> 
+			</ul>
+		</div>
+	</div>
+</div>
+<p><%= @project.description %></p>
