--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -8,7 +8,7 @@
 <div id="event-form" class="common-form">
   <h1>Add Single Event</h1>
   <%= muck_form_for :item, :url => project_items_path(@project), :html => { :multipart => true, :id => "new-item-form", :name => 'new-item-form' } do |f| -%>
-  	<%= output_errors(translate('items.new_problem'), {:class => 'help-box'}, @item) %>
+  	<%= output_errors(translate('items.new_problem'), {:class => 'help-box'}, @item) if @item %>
     <%= render 'form', :f => f %>
   	<div class="button form-row">
     	<%= f.submit translate('general.create') %>
