--- a/app/views/layouts/global/_head.html.erb
+++ b/app/views/layouts/global/_head.html.erb
@@ -14,15 +14,13 @@
   <%= google_load_jquery(http_protocol, '1.4.2') %>
   <%= google_load_jquery_ui(http_protocol, '1.8.4') %>
 <% end -%>
-<%= stylesheet_link_tag %W{ jquery/jquery.fancybox jquery/jquery.timepickr default }, :cache => true %>
+<%= stylesheet_link_tag %W{ jquery/jquery.fancybox jquery/jquery.timepicker default }, :cache => true %>
 <%= javascript_include_tag %w{
   jquery/jquery.form.js
   jquery/jquery.easing.js
   jquery/jquery.fancybox.js
   jquery/jquery.tips.js
-  jquery/jquery.timepickr.min.js
-  jquery/jquery.easing.js
-  jquery/jquery.fancybox.js
+  jquery/jquery.timepicker.min.js
   muck.js
   application.js }, :cache => 'all_js_cached' %>
 <%= javascript_tag %[const AUTH_TOKEN = #{form_authenticity_token.inspect};] if protect_against_forgery? %>
