--- a/app/views/layouts/global/_side_bar.html.erb
+++ b/app/views/layouts/global/_side_bar.html.erb
@@ -9,7 +9,7 @@
 		<% end -%>
 	</div>
 	<ul class="options-list"> 
-		<li><a href="<%= schedule_path %>" class="text-see"><span>See broadcast schedule</span></a></li> 
+		<li><a href="<%= broadcasts_path %>" class="text-see"><span>See broadcast schedule</span></a></li> 
 		<li><a href="<%= projects_path %>" class="text-browse"><span>Browse Re-enactments</span></a></li> 
 		<li><a href="<%= new_project_path %>" class="text-create"><span>Create Re-enactment</span></a></li> 
 	</ul><!-- options list --> 
