--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -13,7 +13,7 @@
 <%= f.file_field :photo, { :label => 'Upload a Photo (Please use a square image)' } %>
 <%= f.text_field :location, { :label => translate('items.location') } -%>
 
-<script>
+<script type="text/javascript" language="JavaScript">
   jQuery(document).ready(function(){
     jQuery('.date_pick').datepicker({
         			changeMonth: true,
