--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,14 +1,16 @@
 <div id="event-upload-form" class="common-form">
+  <p><%= link_to translate('projects.return_to_project', :project_title => @project.title), @project %></p>
   <h1>Upload a CSV file</h1>
   <%= form_for :item, :url => project_items_path(@project), :html => { :multipart => true } do |f| -%>
     <%= f.file_field :csv %>
-    <%= f.submit "Upload", :disable_with => 'Uploading...' %>
+    <%= f.submit "Upload", :id => 'upload_csv', :class => 'wait-button' %>
+    <div class="waiting"><%=translate('items.wait') %></div>
   <% end -%>
 </div>
 <div id="event-form" class="common-form">
   <h1>Add Single Event</h1>
   <%= muck_form_for :item, :url => project_items_path(@project), :html => { :multipart => true, :id => "new-item-form", :name => 'new-item-form' } do |f| -%>
-  	<%= output_errors(translate('items.new_problem'), {:class => 'help-box'}, @item) if @item %>
+  	<%= output_errors(translate('items.new_problem'), {:class => 'help-box'}, @item) %>
     <%= render 'form', :f => f %>
   	<div class="button form-row">
     	<%= f.submit translate('general.create') %>
