--- a/app/views/layouts/global/_footer.html.erb
+++ b/app/views/layouts/global/_footer.html.erb
@@ -3,3 +3,4 @@
 		<li><a href="#">Home</a></li>			<li><a href="#">ReEnactments</a></li>			<li><a href="#">Broadcast Schedule</a></li>			<li><a href="#">In the News</a></li>			<li><a href="#">About</a></li>			<li><a href="#">Contact</a></li>		</ul><!-- nav --> 
 	<p>&copy; copyleft Twhistory Online Licensed under Creative Commons BYNCSA : feel free to use, adapt and share, but always share alike</p> 
 </div>
+<%= output_flash(:class => 'notify-box') %>
