--- a/app/views/layouts/global/_head.html.erb
+++ b/app/views/layouts/global/_head.html.erb
@@ -20,6 +20,7 @@
   jquery/jquery.easing.js
   jquery/jquery.fancybox.js
   jquery/jquery.tips.js
+  jquery/jquery.timers.js
   jquery/jquery.timepicker.min.js
   muck.js
   application.js }, :cache => 'all_js_cached' %>
