--- a/app/views/broadcasts/index.html.erb
+++ b/app/views/broadcasts/index.html.erb
@@ -1,32 +1,12 @@
 <h2>Broadcast Schedule</h2> 
-<h4>Re-enactments in Progress</h4> 
-<ul class="progress-list">						<li> 
-		<strong class="text-sinking4">Sinking of the Titanic</strong> <span class="date">Sep 20-21, 2010</span> 
-		<ul class="follow-list"> 
-			<li><a href="#" class="comments">comments</a></li> 
-			<li><a href="#" class="people">people</a></li> 
-			<li><a href="#" class="doc">doc</a></li> 
-			<li><a href="#" class="follow">follow</a></li> 
-		</ul> 
-	</li> 
-	<li> 
-		<strong class="text-cuban2">Cuban Missle Crisis</strong> <span class="date">Sep 19-Oct 13, 2010</span> 
-		<ul class="follow-list"> 
-			<li><a href="#" class="comments">comments</a></li> 
-			<li><a href="#" class="people">people</a></li> 
-			<li><a href="#" class="doc">doc</a></li> 
-			<li><a href="#" class="follow">follow</a></li> 
-		</ul> 
-	</li> 
-	<li> 
-		<strong class="text-first">First Flight - Kittyhawk</strong> <span class="date">Sep 20-21, 2010</span> 
-		<ul class="follow-list"> 
-			<li><a href="#" class="comments">comments</a></li> 
-			<li><a href="#" class="people">people</a></li> 
-			<li><a href="#" class="doc">doc</a></li> 
-			<li><a href="#" class="follow">follow</a></li> 
-		</ul> 
-	</li>					</ul><!-- progress list --> 
+<h4>Re-enactments in Progress</h4>
+<% if @broadcasts_in_progress.any? -%>
+  <ul class="progress-list">
+    <%= render :partial => 'broadcasts/broadcast', :collection => @broadcasts_in_progress %>
+  </ul>
+<% else -%>
+  No current broadcasts
+<% end -%>
 <h4>Upcoming Re-enactments</h4> 
 <div class="enactments"> 
 	<div class="heading"> 
@@ -46,7 +26,14 @@
 				</div> 
 			</td>								<td class="has-event"> 
 				<div class="table-holder"> 
-					<a href="#" class="date">21</a>										<div class="event gettysburg">											<a href="#" class="name">Gettysburg</a><!-- ned -->											<div class="arrow">												<span class="start">start</span><!-- start -->												<span class="end">end</span><!-- end -->											</div><!-- arrow -->										</div><!-- event block --> 
+					<a href="#" class="date">21</a>										
+					<div class="event gettysburg">											
+					  <a href="#" class="name">Gettysburg</a><!-- ned -->											
+					  <div class="arrow">												
+					    <span class="start">start</span><!-- start -->												
+					    <span class="end">end</span><!-- end -->											
+					  </div><!-- arrow -->										
+					</div><!-- event block --> 
 				</div><!-- table holder --> 
 			</td>								<td> 
 				<div class="table-holder"> 
