--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,10 +1,18 @@
-<div class="item">
+<div class="item hidden-admin_links">
   <div class="visual">
-    <%= image_tag item.photo.url(:icon) if item.photo_file_name %>
+    <%= image_tag item.character.photo.url(:icon) if item.character.photo_file_name %>
   </div>
   <div class="text-holder"> 
     <p><strong class="name"><%= item.character.name %></strong> <%= item.content %></p> 
-		<em class="date"> <%= item.event_date_time %></em>
-  	<div><%= link_to 'Edit', edit_project_item_path(@project, item) %> | <%= link_to 'Destroy', project_item_path(@project, item), :confirm => 'Are you sure?', :method => :delete %> </div>
+		<em class="date"> <%= item.event_date_time.to_s(:date_and_time) %></em>
   </div>
+  <div class="visual">
+    <%= image_tag item.photo.url(:icon) if item.photo_file_name %>
+  </div>
+  <% if @can_edit_project -%>
+  <div class="admin-links">
+	  <%= link_to translate('general.edit'), edit_project_item_path(@project, item) %> | 
+	  <%= link_to translate('general.delete'), project_item_path(@project, item), :confirm => translate('general.delete_confirmation'), :method => :delete %>
+	</div>
+	<% end -%>
 </div>
