--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,77 @@
 <h1>Historical Events for <%= @project.title %></h1>
-<%= link_to '<< Back', @project %>
-<%= link_to translate('projects.add'), new_project_item_path(@project) if @project.can_edit?(current_user) %>
-<div>
-  <%= render @items %>
+<p class="spaced-10">
+  <%= link_to translate('projects.return_to_project', :project_title => @project.title), @project %> |
+  <%= link_to translate('items.add'), new_project_item_path(@project) if @can_edit_project %>
+</p>
+
+<div id="tabs">
+	<ul>
+		<li><a href="#time">Timeline</a></li>
+		<li><a href="#list">List</a></li>
+	</ul>
+	<div id="time">
+	  <div id="timeline" style="height: 450px; border: 1px solid #aaa"></div>
+    <noscript>
+    This page uses Javascript to show you a Timeline. Please enable Javascript in your browser to see the full page. Thank you.
+    </noscript>
+	</div>
+	<div id="list">
+	  <%= render @items %>
+	</div>
 </div>
+
+<script type="text/javascript" language="JavaScript">
+var timeLine;
+var eventSource;
+jQuery(document).ready(function(){
+  eventSource = new Timeline.DefaultEventSource();
+  var date = new Date(<%=ActiveSupport::JSON.encode(@items.first.event_date_time).html_safe%>); 
+  var bandInfos = [
+    Timeline.createBandInfo({
+      width: "80%", 
+      date: date,
+      intervalUnit: Timeline.DateTime.HOUR, 
+      intervalPixels: 20,
+      eventSource: eventSource,
+      timeZone: new Date().getTimezoneOffset() / 60
+    }),
+    Timeline.createBandInfo({
+      overview: true,
+      width: "20%",
+      date: date,
+      intervalUnit: Timeline.DateTime.DAY, 
+      intervalPixels: 200,
+      eventSource: eventSource,
+      timeZone: new Date().getTimezoneOffset() / 60
+    })
+  ];
+  bandInfos[1].syncWith = 0;
+  bandInfos[1].highlight = true;
+  timeLine = Timeline.create(jQuery("#timeline")[0], bandInfos);
+  load_events(); 
+});
+
+var resizeTimerID = null;
+jQuery('body').resize(function() {
+  if (resizeTimerID == null) {
+    resizeTimerID = window.setTimeout(function() {
+      resizeTimerID = null;
+      timeLine.layout();
+    }, 500);
+  }
+});
+
+function load_events(){
+  <% @items.each do |item| -%>
+  eventSource.add(new Timeline.DefaultEventSource.Event(new Date(<%=ActiveSupport::JSON.encode(item.event_date_time).html_safe%>), null, null, null, true, "<%= item.content %>", "<%= item.character.name %>"));
+  <% end -%>
+}
+
+jQuery(function() {
+  jQuery("#tabs").tabs();
+});
+</script>
+
+<% content_for :head do -%>
+<script src="http://simile.mit.edu/timeline/api/timeline-api.js" type="text/javascript"></script>
+<% end -%>
