--- a/app/views/characters/_link_twitter.html.erb
+++ b/app/views/characters/_link_twitter.html.erb
@@ -5,7 +5,7 @@
         Connected to Twitter Account: <%= link_to @character.authentication.nickname, "http://www.twitter.com/#{@character.authentication.nickname}", :target => '_blank' %>
         <%= link_to translate('general.delete'), authentication_path(@character.authentication), :confirm => translate('general.delete_confirmation'), :method => :delete %>
       </p>
-      <p>(All tweets for <%= @chracter.name %> will be sent to this account).</p>
+      <p>(All tweets for <%= @character.name %> will be sent to this account).</p>
     </div>
   <% else -%>
     <%= link_to translate('characters.link_twitter_account'), new_character_authentication_path(@character), :class => "twitter-ico" %> (Be sure you are logged out of Twitter before performing this step).
