adding twitter methods. adding edit to project page

--- a/app/views/layouts/global/_head.html.erb
+++ b/app/views/layouts/global/_head.html.erb
@@ -5,6 +5,7 @@
 <meta name="robots" content="all" />	
 <meta name="resource-type" content="document" />
 <meta name="MSSmartTagsPreventParsing" content="true" />
+<link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica&subset=latin' rel='stylesheet' type='text/css'>
 <% if MuckEngine.configuration.local_jquery -%>
   <link rel="stylesheet" href="/stylesheets/jquery/smoothness/jquery-ui-1.8.4.custom.css" type="text/css" />
   <script src="/javascripts/jquery/jquery.js" type="text/javascript"></script>
